<resources>
    <string name="app_name">EQ App</string>
    <string name="startButton">Start</string>
    <string name="stopButton">Stop</string>
    <string name="audioRec">Recording</string>
    <string name="desc_processed_image">Processed image</string>
    <string name="stop_button">Stop</string>
    <string name="start_button">Start</string>
    <string name="import_mp3_button">Import MP3</string>
    <string name="recording_indicator">Recording…</string>
    <string name="title_screen">Start recording or upload MP3</string>
    <string name="after_recording">Recording finished! Proceed to EQ or create new audio.</string>
    <string name="loading">Loading...</string>
    <string name="uploading">Importing Audio...</string>
    <string name="ready">Upload finished! Proceed to EQ or create new audio.</string>

</resources>
