<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecorderActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startButton"
            android:textSize="20sp"
            android:id="@+id/record"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopButton"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/recordingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audioRec"
            android:textSize="18sp"
            android:textColor="#FF0000"
            android:paddingTop="20dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/audioStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volume info"
            android:textSize="16sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>